--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,8 +1,24 @@
 FROM python:3.10.12-slim
-RUN apt-get update -y \
-    && apt-get install -y --no-install-recommends libc6-dev make dpkg-dev git openssh-client libreoffice-common libreoffice-core libreoffice-writer \
-    && apt-get clean all \
-    && rm -rf /var/cache/apt/archives /var/lib/apt/lists/*
+RUN apt-get update -y && \
+    apt-get install -y --no-install-recommends \
+    software-properties-common && \
+    echo "deb http://deb.debian.org/debian bullseye main contrib non-free" > /etc/apt/sources.list.d/non-free.list && \
+    apt-get update -y && \
+    apt-get remove -y unrar-free || true && \
+    apt-get install -y --no-install-recommends \
+    libc6-dev \
+    make \
+    dpkg-dev \
+    git \
+    openssh-client \
+    libreoffice-common \
+    libreoffice-core \
+    libreoffice-writer \
+    unrar \
+    libunrar5 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 ARG git_token
 ENV CONFIG_FILE="/opt/SVTECH_ATP_Hardware_automation/streamlit/config.yaml"
 RUN /usr/bin/git clone --branch main https://$git_token@github.com/svtechnmaa/SVTECH_ATP_Hardware_automation.git /opt/SVTECH_ATP_Hardware_automation
